Opened 12 years ago
Closed 12 years ago
#4193 closed bug (fixed)
'Colors' pull-down menu resizes while label stays the same
Reported by: | idefix | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Screen | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When you click on the Colors
pull-down menu in the Screen preferences window and choose the checked value, the menu and the window will resize while the label stays the same.
Steps to reproduce:
- Delete the
Screen_data
file (rm ~/config/settings/Screen_data
) - Start Screen preferences:
- Click on the
Colors
menu and then click on the checked value: - Notice that the label stays the same, but the menu and the window are wider:
I'm not sure if this is a bug in Screen preferences or in the Interface Kit.
Attachments (3)
Change History (7)
by , 12 years ago
Attachment: | Screen1.png added |
---|
comment:1 by , 12 years ago
Component: | Preferences/Screen → Kits/Interface Kit |
---|
That's obviously a problem of BMenuField (not the only one, I might add).
comment:2 by , 12 years ago
Resolution: | → duplicate |
---|---|
Status: | new → closed |
This problem is already tracked in ticket #2413
comment:3 by , 12 years ago
Component: | Kits/Interface Kit → Preferences/Screen |
---|---|
Resolution: | duplicate |
Status: | closed → reopened |
Actually, no, this is a bug in Screen itself.
Note:
See TracTickets
for help on using tickets.
default Screen preferences window