* The colors menu had "label from marked" activated, but then replaced its   label, causing bug #4193.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32176 a95241bf-73f2-0310-859d-f6bbb57e9c96